--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Destination</title>
     <link rel="stylesheet" href="./css/style.css">
     <script defer src="./js/index.js"></script>
 </head>
 <body>
     <div id="player"></div>
     <div id="ground"></div>
+    <div id="ground2"></div>
     <div id="birds"><img src="./img/25382-2-flying-bird-hd.png" alt=""></div>
+    <div id="arrow"><img src="./img/graveyardtilesetnew/png/Objects/ArrowSign.png" alt=""></div>
+    <div id="tree"><img src="./img/graveyardtilesetnew/png/Objects/Tree.png" alt=""></div>
+    <div id="tile1"><img src="./img/graveyardtilesetnew/png/Tiles/Tile (1).png" alt=""></div>
+    <div id="tile3"><img src="./img/graveyardtilesetnew/png/Tiles/Tile (3).png" alt=""></div>
+    <div id="alert">Let's Begin the Journey!</div>
+    <div id="bg"></div>
 </body>
 </html>
