--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
     <div id="player"></div>
     <div id="ground"></div>
+    <div id="ground2"></div>
     <div id="birds"><img src="./img/25382-2-flying-bird-hd.png" alt=""></div>
-</body>
+    <div id="arrow"><img src="./img/graveyardtilesetnew/png/Objects/ArrowSign.png" alt=""></div>
+    <div id="tree"><img src="./img/graveyardtilesetnew/png/Objects/Tree.png" alt=""></div>
+    <div id="tile1"><img src="./img/graveyardtilesetnew/png/Tiles/Tile (1).png" alt=""></div>
+    <div id="tile3"><img src="./img/graveyardtilesetnew/png/Tiles/Tile (3).png" alt=""></div>
+    <div id="alert">Let's Begin the Journey!</div>
+    <div id="bg"></div></body>
 </html>
